--- a/frontend/src/app/menu/menu.component.css
+++ b/frontend/src/app/menu/menu.component.css
@@ -1,6 +1,7 @@
 nav{
     background-color: #F9DBAA;
     margin: 0px 0px 10px 0px ;
+    color: #7A3E48;
 }
 .navbar {
     padding: 0 5px 0 0;
@@ -11,7 +12,13 @@ nav{
 }
 
 .navbar-nav li {
-    margin: 0 22px;
+    margin: 0px 5px;
+    cursor: pointer;
+}
+.navbar-nav li a{
+    padding: 0 20px;
+    cursor: pointer;
+    margin: 10px 3px;
 }
 
 .marginLogo {
