--- a/frontend/src/app/menu/menu.component.html
+++ b/frontend/src/app/menu/menu.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top">
 
   <a class="navbar-brand marginLogo" href="#">
-    <img src="../../assets/images/logo/logo-03.png" width="100px" alt="logoIrCulturapp">
+    <img src="../../assets/images/logo/logoVersion2.png" width="100px" alt="logoIrCulturapp">
   </a>
 
 
@@ -15,11 +15,14 @@
   <div class="collapse navbar-collapse" data-toggle="collapse" id="navbarSupportedContent"
     data-target="#navbarSupportedContent">
     <ul class="navbar-nav mr-0">
-      <li class="nav-item">
-        <a routerLink="centrosCulturales" class="nav-link">Agentes Culturales</a>
+       <li class="nav-item">
+        <a href="#" class="nav-link">Inicio</a>
       </li>
       <li class="nav-item">
-        <a routerLink="mapa" class="nav-link">Mapa</a>
+        <a data-toggle="modal" data-target="#centrosCulturalesModal" class="nav-link">Agentes Culturales</a>
+      </li>
+      <li class="nav-item">
+        <a href="#mapid" class="nav-link">Mapa</a>
       </li>
       <li class="nav-item">
         <a routerLink="videosEscenarios" class="nav-link">Videos y escenarios</a>
@@ -31,9 +34,9 @@
         <a routerLink="calendario" class="nav-link">Calendario</a>
       </li>
       <li class="nav-item">
-        <a routerLink="informacion" class="nav-link">información</a>
+        <a href="#footer" class="nav-link">Información</a>
       </li>
-      <li class="nav-item dropdown">
+      <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           Iniciar Sesión
@@ -42,11 +45,14 @@
           <a class="dropdown-item" routerLink = "inicioSesionUsuario">Usuario</a>
           <a class="dropdown-item" routerLink = "inicioSesionCentroCultural">Agente Cultural</a>
         </div>
-      </li>
-      <li class="nav-item">
+      </li> -->
+      <!-- <li class="nav-item">
         <a routerLink="registroUsuario" class="nav-link" id="botonRegistro">Registrate</a>
-      </li>
+      </li> -->
     </ul>
   </div>
 </nav>
 <!-- Final del nav bar -->
+
+
+<app-modal-centros-culturales></app-modal-centros-culturales>
