--- a/frontend/src/app/calendario/calendario.component.html
+++ b/frontend/src/app/calendario/calendario.component.html
@@ -1,46 +1,37 @@
-
-<div class="modal fade" id="agendario" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
+<div class="contenedor modal fade" id="agendario" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="calendario modal-content">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
       <div class="modal-body">
-
-
-    <div class="contenedor">
-        <div class="calendario">
-            <div class="mes">
-                <i class="fas fa-angle-left prev" id="mesAnterior"(click) = "mesAnterior()"></i>
-                <div class="fecha">
-                    <h1 id="mes"></h1>
-                    <p id = "fechaActual"></p>
-                </div>
-                <i class="fas fa-angle-right next" (click) = "mesSiguiente()"></i>
-            </div>
-            <div class="diasSemana">
-                <div>Do</div>
-                <div>Lu</div>
-                <div>Ma</div>
-                <div>Mi</div>
-                <div>Ju</div>
-                <div>Vi</div>
-                <div>Sá</div>
-            </div>
-            <div class="dias" id="dias">
-               
-            </div>
+        <div class="mes">
+          <i class="fas fa-angle-left prev " id="mesAnterior" (click)="mesAnterior()"></i>
+          <div class="fecha">
+            <h1 id="mes"></h1>
+            <p id="fechaActual"></p>
+          </div>
+          <i class="fas fa-angle-right next" (click)="mesSiguiente()"></i>
         </div>
+        <div class="diasSemana">
+          <div>Do</div>
+          <div>Lu</div>
+          <div>Ma</div>
+          <div>Mi</div>
+          <div>Ju</div>
+          <div>Vi</div>
+          <div>Sá</div>
+        </div>
+        <div class="dias" id="dias">
+
+        </div>
+      </div>
     </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-      </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
     </div>
   </div>
 </div>
-  
 
+<img src="../../assets/images/logo/logo-03.png" class="logoEventoAgendario" alt="logoEventoAgendario">
