guardando cambios generales para la carpeta que tiene el back y en front

--- a/frontend/src/app/calendario/calendario.component.html
+++ b/frontend/src/app/calendario/calendario.component.html
@@ -34,4 +34,31 @@
   </div>
 </div>
 
-<img src="../../assets/images/logo/logo-03.png" class="logoEventoAgendario" alt="logoEventoAgendario">
+<!-- Modal del evento del 5 de dic -->
+
+<div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"
+  id='evento5Dic'>
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Inauguración IrCulturApp</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="card">
+          <a href="#">
+            <img src="../../../assets/images/invitacion5Dic.jpg" class="card-img-top"
+              alt="invitacion5Dic">
+          </a>  
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- 1. Final del modal del centro cultural San Miguel Studio -->
