--- a/frontend/src/app/calendario/calendario.component.css
+++ b/frontend/src/app/calendario/calendario.component.css
@@ -1,104 +1,3 @@
-
-.modal-body{
-    max-width: 100%;
-}
-
-/*
-.contenedor{
-    width: 100%;
-    height: 100vh;
-    background-color: #12121f;
-    color: #eee;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 100%;
-}
-
-.calendario{
-    width: 100%;
-    height: 52rem;
-    background-color: #222227;
-    box-shadow: 0.5rem 3rem rgba(0, 0, 0, 0.4);
-    max-width: 100%;
-}
-
-.mes{
-    width: 100%;
-    height: 12rem;
-    background-color: #167e56;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 2rem;
+.modal-title{
     text-align: center;
-    text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
 }
-.mes i{
-    font-size: 2.5rem;
-    cursor: pointer;
-}
-.mes h1{
-    font-size: 3rem;
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 0.2rem;
-    margin-bottom: 1rem;
-}
-.mes p{
-    font-size: 1.6rem;
-}
-.diasSemana{
-    width: 100%;
-    height: 5rem;
-    padding: 0 0.4rem;
-    display: flex;
-    align-items: center;
-    
-}
-.diasSemana div{
-    font-size: 1.5rem;
-    font-weight: 400;
-    letter-spacing: 0.1rem;
-    width: calc(100%/7);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
-}
-.dias{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0.2rem;
-
-}
-.dias div{
-    font-size: 1.4rem;
-    
-    width: calc(100%/7);
-    height: 5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
-    transition: background-color 0.3s;
-}
-.dias div:hover:not(.hoy){
-    background-color: #262626;
-    border: 0.5rem solid #777;
-    cursor: pointer;
-}
-.prev-fecha,
-.siguiente-fecha{
-    opacity: 0.5;
-}
-.hoy{
-    background-color: #167e56;
-}
-
-*/
-
-
-
-
